# Python-Automatic-Scripts

./: .env.example  .gitignore  .pylintrc  README.md  pyproject.toml
tasks/: email_send_task.py  get_started.py  utils.py
tasks/govbr/: handle_add_document.py  handle_govbr_login.py  handle_page_access.py  task.py
tasks/send_email/: handle_gmail_login.py  handle_send_email.py  page_access.py  task.py
